--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^1.1.1",
+    "gulp-replace": "^0.6.1",
     "main-bower-files": "^2.5.0",
     "opn": "^1.0.1",
     "require-dir": "^0.3.0",
